[turbofan] Workaround for the GCC behaviour described in http://crbug.com/675648

R=jarin@chromium.org
BUG=675648

Review-Url: https://codereview.chromium.org/2598463003
Cr-Commit-Position: refs/heads/master@{#41886}